--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -79,3 +79,8 @@ obj-${CONFIG_MACH_WHISTLER}             += board-whistler-sensors.o
 obj-${CONFIG_MACH_WHISTLER}             += board-whistler-kbc.o
 obj-${CONFIG_MACH_WHISTLER}             += board-whistler-baseband.o
 obj-${CONFIG_MACH_WHISTLER}             += board-whistler-memory.o
+
+obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse.o
+obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse-pinmux.o
+obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse-panel.o
+obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse-sdhci.o
