--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -86,3 +86,4 @@ obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse-pinmux.o
 obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse-panel.o
 obj-${CONFIG_MACH_BETELGEUSE}		+= board-betelgeuse-power.o
 obj-${CONFIG_MACH_BETELGEUSE}           += board-betelgeuse-sdhci.o
+obj-${CONFIG_MACH_BETELGEUSE}		+= board-betelgeuse-memory.o
